--- a/src/client/index.html
+++ b/src/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QLutch</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Rajdhani:wght@400;500;700&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <div class="container-home">
         <div class="home-main">
             <h1>The lightweight caching solution for GraphQL developers</h1>
-            <button>Try Demo</button>
+            <button><a href="/graphql" target="_blank">Try Demo</a></button>
         </div>
     </div>
 
