--- a/src/client/index.html
+++ b/src/client/index.html
@@ -30,7 +30,7 @@
     <div class="container-home">
         <div class="home-main">
             <h1>The lightweight caching solution for GraphQL developers</h1>
-            <button><a href="/graphql" target="_blank">Try Demo</a></button>
+            <button><a href="#">Try Demo</a></button>
         </div>
     </div>
 
