--- a/src/client/index.html
+++ b/src/client/index.html
@@ -40,7 +40,7 @@
         <div class="feature-main">
             <div class="feature-articles">
                 <span class="header">Lightning-fast Caching</span><br>
-                <span class="paragraph">Cache both client-side and server-side GraphQL queries with speed and simplicity.</span><br><br>
+                <span class="paragraph">Cache server-side GraphQL queries with speed and simplicity.</span><br><br>
                 <span class="header">Enhanced Query Efficiency</span><br>
                 <span class="paragraph">Make precise queries to retrieve your data with reduced cache misses.</span><br><br>
                 <span class="header">Robust Caching Strategies</span><br>
